# mx-launchpad-sc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml  release-guaranteed-tickets.yml  release-locked-tokens-and-guaranteed-tickets.yml  release-nft-and-guaranteed-tickets.yml  release.yml
launchpad/: Cargo.toml  README.md
launchpad-common/: Cargo.toml
launchpad-common/src/: blacklist.rs  common_events.rs  config.rs  launch_stage.rs  lib.rs  ongoing_operation.rs  permissions.rs  random.rs  setup.rs  tickets.rs  token_send.rs  user_interactions.rs  winner_selection.rs
launchpad-guaranteed-tickets/: Cargo.toml
launchpad-guaranteed-tickets-v2/: Cargo.toml
launchpad-guaranteed-tickets-v2/meta/: Cargo.toml
launchpad-guaranteed-tickets-v2/meta/src/: main.rs
launchpad-guaranteed-tickets-v2/src/: events.rs  guaranteed_ticket_winners.rs  guaranteed_tickets_init.rs  lib.rs  token_release.rs
launchpad-guaranteed-tickets-v2/tests/: guaranteed_tickets_test.rs
launchpad-guaranteed-tickets-v2/tests/guaranteed_tickets_setup/: mod.rs
launchpad-guaranteed-tickets-v2/wasm/: Cargo.toml
launchpad-guaranteed-tickets-v2/wasm/src/: lib.rs
launchpad-guaranteed-tickets/meta/: Cargo.toml
launchpad-guaranteed-tickets/meta/src/: main.rs
launchpad-guaranteed-tickets/src/: guaranteed_ticket_winners.rs  guaranteed_tickets_init.rs  guranteed_ticket_winners.rs  lib.rs  token_release.rs
launchpad-guaranteed-tickets/tests/: guaranteed_tickets_test.rs
launchpad-guaranteed-tickets/tests/guaranteed_tickets_setup/: mod.rs
launchpad-guaranteed-tickets/wasm/: Cargo.toml
launchpad-guaranteed-tickets/wasm/src/: lib.rs
launchpad-locked-tokens/: Cargo.toml
launchpad-locked-tokens-and-guaranteed-tickets/: Cargo.toml
launchpad-locked-tokens-and-guaranteed-tickets/interaction/: internal_readme.md  snippets.sh
launchpad-locked-tokens-and-guaranteed-tickets/meta/: Cargo.toml
launchpad-locked-tokens-and-guaranteed-tickets/meta/src/: main.rs
launchpad-locked-tokens-and-guaranteed-tickets/src/: lib.rs
launchpad-locked-tokens-and-guaranteed-tickets/tests/: locked_tokens_with_guaranteed_tickets_test.rs
launchpad-locked-tokens-and-guaranteed-tickets/tests/guaranteed_tickets_setup/: mod.rs  simple_lock_mock.rs
launchpad-locked-tokens-and-guaranteed-tickets/wasm/: Cargo.toml
launchpad-locked-tokens-and-guaranteed-tickets/wasm/src/: lib.rs
launchpad-locked-tokens/interaction/: internal_readme.md
launchpad-locked-tokens/meta/: Cargo.toml
launchpad-locked-tokens/meta/src/: main.rs
launchpad-locked-tokens/src/: lib.rs  locked_launchpad_token_send.rs
launchpad-locked-tokens/tests/: launchpad_locked_tokens_test.rs
launchpad-locked-tokens/wasm/: Cargo.toml
launchpad-locked-tokens/wasm/src/: lib.rs
launchpad-migration-guaranteed-tickets/: Cargo.toml
launchpad-migration-guaranteed-tickets/meta/: Cargo.toml
launchpad-migration-guaranteed-tickets/meta/src/: main.rs
launchpad-migration-guaranteed-tickets/src/: guaranteed_tickets_init.rs  lib.rs
launchpad-migration-guaranteed-tickets/tests/: migration_guaranteed_tickets_test.rs
launchpad-migration-guaranteed-tickets/tests/migration_guaranteed_tickets_setup/: mod.rs
launchpad-migration-guaranteed-tickets/wasm/: Cargo.toml
launchpad-migration-guaranteed-tickets/wasm/src/: lib.rs
launchpad-nft-and-guaranteed-tickets/: Cargo.toml
launchpad-nft-and-guaranteed-tickets/interaction/: internal_readme.md  snippets.sh
launchpad-nft-and-guaranteed-tickets/meta/: Cargo.toml
launchpad-nft-and-guaranteed-tickets/meta/src/: main.rs
launchpad-nft-and-guaranteed-tickets/src/: combined_selection.rs  lib.rs
launchpad-nft-and-guaranteed-tickets/tests/: combined_selection_test.rs
launchpad-nft-and-guaranteed-tickets/tests/combined_selection_setup/: mod.rs
launchpad-nft-and-guaranteed-tickets/wasm/: Cargo.toml
launchpad-nft-and-guaranteed-tickets/wasm/src/: lib.rs
launchpad-v2/: Cargo.toml
launchpad-v2/interaction/: internal_readme.md  snippets.sh
launchpad-v2/meta/: Cargo.toml
launchpad-v2/meta/src/: main.rs
launchpad-v2/src/: claim_nft.rs  confirm_nft.rs  lib.rs  mystery_sft.rs  nft_winners_selection.rs
launchpad-v2/tests/: launchpad_v2_test.rs
launchpad-v2/tests/launchpad_v2_setup/: mod.rs
launchpad-v2/wasm/: Cargo.toml
launchpad-v2/wasm/src/: lib.rs
launchpad-with-nft/: Cargo.toml
launchpad-with-nft/interaction/: internal_readme.md  snippets.sh
launchpad-with-nft/meta/: Cargo.toml
launchpad-with-nft/meta/src/: main.rs
launchpad-with-nft/src/: claim_nft.rs  confirm_nft.rs  lib.rs  mystery_sft.rs  nft_blacklist.rs  nft_config.rs  nft_winners_selection.rs
launchpad-with-nft/tests/: launchpad_v2_test.rs
launchpad-with-nft/tests/launchpad_with_nft_setup/: mod.rs
launchpad-with-nft/wasm/: Cargo.toml
launchpad-with-nft/wasm/src/: lib.rs
launchpad/abi/: Cargo.toml
launchpad/abi/src/: main.rs
launchpad/interaction/: end_owner_snippets.sh  internal_readme.md  readme.md  snippets.sh
launchpad/mandos/: add_tickets.scen.json  blacklist.scen.json  blacklist_support.scen.json  claim.scen.json  confirm_after_new_selection.scen.json  confirm_tickets.scen.json  deposit_launchpad_tokens.scen.json  deposit_launcpad_tokens.scen.json  filter_tickets_consistency.scen.json  init.scen.json  max_gas_limit_shuffle.scen.json  select_new_winners_multiple_calls.scen.json  select_new_winners_one_call.scen.json  select_winners_multiple_calls.scen.json  select_winners_one_call.scen.json  set_stage.scen.json  temp_test.scen.json  winner_selection_equal_claim_epoch.scen.json
launchpad/meta/: Cargo.toml
launchpad/meta/src/: main.rs
launchpad/snippets/: dev.snippet.sh
launchpad/src/: blacklist.rs  config.rs  launch_stage.rs  launchpad.rs  lib.rs  ongoing_operation.rs  random.rs  setup.rs  ticket_status.rs  user_interactions.rs  winner_selection.rs
launchpad/wasm/: Cargo.toml
launchpad/wasm/src/: lib.rs
