[package]
name = "launchpad-guaranteed-tickets-v2"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.multiversx-sc]
version = "0.51.1"

[dev-dependencies.multiversx-sc-meta-lib]
version = "0.51.1"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.51.1"
