[package]
name = "launchpad-locked-tokens-and-guaranteed-tickets"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.launchpad-locked-tokens]
path = "../launchpad-locked-tokens"

[dependencies.launchpad-guaranteed-tickets]
path = "../launchpad-guaranteed-tickets"

[dependencies.elrond-wasm]
version = "0.33.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.33.0"
