[package]
name = "launchpad-locked-tokens-and-guaranteed-tickets"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.launchpad-locked-tokens]
path = "../launchpad-locked-tokens"

[dependencies.launchpad-guaranteed-tickets]
path = "../launchpad-guaranteed-tickets"

[dependencies.multiversx-sc]
version = "0.41.1"

[dev-dependencies.multiversx-sc-meta]
version = "0.41.1"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.41.1"
