[package]
name = "launchpad-nft-and-guaranteed-tickets"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.launchpad-with-nft]
path = "../launchpad-with-nft"

[dependencies.launchpad-guaranteed-tickets]
path = "../launchpad-guaranteed-tickets"

[dependencies.multiversx-sc]
version = "0.51.1"

[dependencies.multiversx-sc-modules]
version = "0.51.1"

[dev-dependencies.multiversx-sc-meta-lib]
version = "0.51.1"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.51.1"
