[package]
name = "launchpad"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.multiversx-sc]
version = "0.54.1"

[dependencies.multiversx-sc-modules]
version = "0.54.1"

[dev-dependencies.multiversx-sc-meta-lib]
version = "0.54.1"
