[package]
name = "launchpad-guaranteed-tickets-v2-meta"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[dependencies.launchpad-guaranteed-tickets-v2]
path = ".."

[dependencies.multiversx-sc]
version = "0.53.0"

[dependencies.multiversx-sc-meta-lib]
version = "0.53.0"
