[package]
name = "launchpad-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[dependencies.launchpad-guaranteed-tickets]
path = ".."

[dependencies.multiversx-sc]
version = "0.53.0"

[dependencies.multiversx-sc-meta-lib]
version = "0.53.0"
