[package]
name = "launchpad-locked-tokens-and-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[dependencies.launchpad-locked-tokens-and-guaranteed-tickets]
path = ".."

[dependencies.elrond-wasm]
version = "0.33.0"

[dependencies.elrond-wasm-debug]
version = "0.33.0"
