[package]
name = "launchpad-locked-tokens-and-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[dependencies.launchpad-locked-tokens-and-guaranteed-tickets]
path = ".."

[dependencies.multiversx-sc]
version = "0.54.1"

[dependencies.multiversx-sc-meta-lib]
version = "0.54.1"
