[package]
name = "launchpad-locked-tokens-meta"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[dependencies.launchpad-locked-tokens]
path = ".."

[dependencies.multiversx-sc]
version = "0.41.1"

[dependencies.multiversx-sc-meta]
version = "0.41.1"
