[package]
name = "launchpad-nft-and-guaranteed-tickets-wasm"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.launchpad-nft-and-guaranteed-tickets]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.33.0"

[dependencies.elrond-wasm-output]
version = "0.33.0"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
